--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Web Portfolio</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-    
+    <h1>Welcome To </h1>
+    <h1> <span class="name-highlight">Shan</span> Website</h1>
+    <p>
+        Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla nobis nemo praesentium eos, quibusdam corporis odio officiis sunt cum aliquid sint! Voluptatem officia accusamus ratione repellat reiciendis fugit quod mollitia?
+    </p>
 </body>
 </html>
