--- a/index.html
+++ b/index.html
@@ -11,10 +11,18 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+<section>
+<div class="half-width">
     <h1>Welcome To </h1>
     <h1> <span class="name-highlight">Shan</span> Website</h1>
+    <h3>World Class Website</h3>
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla nobis nemo praesentium eos, quibusdam corporis odio officiis sunt cum aliquid sint! Voluptatem officia accusamus ratione repellat reiciendis fugit quod mollitia?
     </p>
+</div>
+<div class="half-width">
+    <img src="images/shan.png" alt="profile pic ">
+</div>
+</section>
 </body>
 </html>
