--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<section>
+<section class="top-banner">
 <div class="half-width">
     <h1>Welcome To </h1>
     <h1> <span class="name-highlight">Shan</span> Website</h1>
