--- a/index.html
+++ b/index.html
@@ -19,10 +19,25 @@
     <p>
         Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla nobis nemo praesentium eos, quibusdam corporis odio officiis sunt cum aliquid sint! Voluptatem officia accusamus ratione repellat reiciendis fugit quod mollitia?
     </p>
+    <a class="link-button" target="blank" href="https://www.linkedin.com/in/hshan74/">Hire Me</a>
 </div>
 <div class="half-width">
     <img src="images/shan.png" alt="profile pic ">
 </div>
 </section>
+<section class="Dream">
+    <div class="half-width">
+        <img src="images/shan2.png" alt="profile pic ">
+    </div>
+    <div class="half-width">
+       <h2>Big Dream</h2>
+        <h3>World Class Website</h3>
+        <p>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla nobis nemo praesentium eos, quibusdam corporis odio officiis sunt cum aliquid sint! Voluptatem officia accusamus ratione repellat reiciendis fugit quod mollitia.
+        </p>
+        <a class="link-button" target="blank" href="https://www.linkedin.com/in/hshan74/">Download Resume</a>
+    </div>
+
+    </section>
 </body>
 </html>
